@@ -1,3 +1,7 @@
+2008-08-28  David Wetzel <dave@turbocat.de>
+        * bug #24006 keep-alive is not implemented.
+          announce close connections for now
+ 
 2008-08-20  David Wetzel <dave@turbocat.de>
         GSWeb.framework:
         * fixed many warnings
